# zed-restclient

./: .gitignore  CHANGELOG.md  Cargo.toml  INSTALL_QUICK.md  LICENSE  OPTIMIZATION_RESULTS.md  PERFORMANCE.md  README.md  RELEASE_CHECKLIST.md  RELEASE_SUMMARY.md  TEST_COVERAGE.md  USAGE.md  build-lsp.ps1  build-lsp.sh  build-optimized.ps1  build-optimized.sh  extension.toml  install-dev.ps1  install-dev.sh  lsp-server  prepare-release.sh  verify-installation.sh
.github/workflows/: ci.yml  release-lsp.yml  release.yml
benches/: README.md  formatter_benchmark.rs  parser_benchmark.rs  variable_substitution_benchmark.rs
docs/: CODELENS.md  CODE_GENERATION.md  CODE_GENERATION_USAGE.md  CONFIGURATION.md  CURL_COMMANDS_USAGE.md  DIAGNOSTICS.md  ENVIRONMENTS.md  FEATURES.md  GETTING_STARTED.md  GRAPHQL.md  INSTALL_DEV.md  LSP_FEATURES.md  MIGRATION.md  MIGRATION_SUMMARY.md  QUICK_START.md  REQUEST_VARIABLES.md  TROUBLESHOOTING.md  VARIABLES.md  WASM_BUILD.md
examples/: .gitignore.example  .http-client-env.json  README.md  authentication.http  basic-requests.http  codelens-demo.http  curl-import-export.http  environment-variables.http  example-settings.json  example-settings.jsonc  graphql-examples.http  json-api.http  lsp-features-demo.http  request-cancellation.md  request-chaining.http  response-formatting.md  system-variables.http  test-syntax.http  timing-breakdown.md  variable-substitution.http  with-variables.http
languages/http/: README.md  config.toml  grammar.js  highlights.scm  package-lock.json  package.json  runnables.scm  simple-test.http  test.http
openspec/: project.md
scripts/: release.sh
src/: commands.rs  lib.rs  lsp_download.rs
src/auth/: basic.rs  bearer.rs  mod.rs
src/codegen/: javascript.rs  mod.rs  python.rs  ui.rs
src/config/: mod.rs  schema.rs
src/curl/: mod.rs  (+3 more)
tests/: codegen_integration.rs  codelens_integration.rs  diagnostics_integration.rs  diagnostics_test.http  graphql_integration.rs  integration_tests.rs
(+67 files in other folders)
