[package]
name = "rest-client"
version = "0.1.0"
edition = "2021"
authors = ["REST Client Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/zed-industries/zed-rest-client"
description = "A Zed extension for sending HTTP requests and viewing responses"

[lib]
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1.35", features = ["time", "macros", "rt-multi-thread"] }
url = "2.5"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
