[package]
name = "rest-client"
version = "0.1.0"
edition = "2021"
authors = ["REST Client Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/zed-industries/zed-rest-client"
description = "A Zed extension for sending HTTP requests and viewing responses"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
zed_extension_api = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
url = "2.5"
uuid = { version = "1.7", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
base64 = "0.21"
once_cell = "1.19"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "macros"] }
tempfile = "3.8"
serial_test = "3.0"
wiremock = "0.6"
mockito = "1.2"
httpmock = "0.7"
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.bench]
inherits = "release"

[[bench]]
name = "parser_benchmark"
harness = false

[[bench]]
name = "formatter_benchmark"
harness = false

[[bench]]
name = "variable_substitution_benchmark"
harness = false
